[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/MoveController.gd" type="Script" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://weapons/M1.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/CharacterModel.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/WeaponController.gd" type="Script" id=5]
[ext_resource path="res://player/HealthController.gd" type="Script" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
collision_layer = 2
collision_mask = 11
script = ExtResource( 2 )

[node name="MoveController" type="Node" parent="."]
script = ExtResource( 1 )
max_speed = 25.0
move_accel = 4.0

[node name="WeaponController" type="Node" parent="."]
script = ExtResource( 5 )

[node name="HealthController" type="Node" parent="."]
script = ExtResource( 6 )

[node name="CameraRemote" type="RemoteTransform" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17878, 0 )

[node name="WeaponSocket" type="Spatial" parent="CameraRemote"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.320019, -0.294549, -0.951001 )

[node name="M1" parent="CameraRemote/WeaponSocket" groups=[
"firstperson",
] instance=ExtResource( 3 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.5, 0 )
shape = SubResource( 1 )

[node name="CharacterModel" parent="." groups=[
"thirdperson",
] instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.457416, 0 )

[node name="Hand" parent="CharacterModel/Armature/Skeleton" index="1"]
transform = Transform( -8.46921e-08, 1, -1.49012e-08, -1, -1.09983e-07, -5.69597e-06, -5.6976e-06, 1.49012e-08, 1, 0.724716, 0.488436, -8.9407e-08 )

[node name="M1" parent="CharacterModel/Armature/Skeleton/Hand/WeaponSocket" index="0" instance=ExtResource( 3 )]

[node name="ForearmR" parent="CharacterModel/Armature/Skeleton" index="2"]
transform = Transform( -0.0375446, -0.996741, 0.0713906, 0.999295, -0.0374668, 0.00242871, 0.000253975, 0.0714315, 0.997445, -0.466534, 0.498141, -0.0185027 )

[node name="ForearmL" parent="CharacterModel/Armature/Skeleton" index="3"]
transform = Transform( -0.0375447, 0.996742, -0.0713906, -0.999295, -0.037467, 0.00242873, -0.000253979, 0.0714314, 0.997445, 0.466534, 0.498141, -0.0185027 )

[node name="UpperarmL" parent="CharacterModel/Armature/Skeleton" index="4"]
transform = Transform( 0.0329136, 0.995349, 0.0905372, -0.999458, 0.0328765, 0.00190155, -0.00108384, -0.0905507, 0.995891, 0.0930329, 0.485804, 0.0154761 )

[node name="UpperarmR" parent="CharacterModel/Armature/Skeleton" index="5"]
transform = Transform( 0.0329137, -0.995349, -0.0905372, 0.999457, 0.0328767, 0.00190157, 0.00108384, -0.0905507, 0.995891, -0.0930329, 0.485804, 0.0154761 )

[node name="UpperlegR" parent="CharacterModel/Armature/Skeleton" index="6"]
transform = Transform( -0.999865, 0.0163822, -0.00135807, -0.0164355, -0.994701, 0.101489, 0.000311735, 0.101495, 0.994855, -0.0825963, -0.0559523, -0.0249671 )

[node name="UpperlegL" parent="CharacterModel/Armature/Skeleton" index="7"]
transform = Transform( -0.999865, -0.0163822, 0.00135792, 0.0164355, -0.994701, 0.101489, -0.000311886, 0.101495, 0.994855, 0.0825963, -0.0559523, -0.0249671 )

[node name="LowerlegR" parent="CharacterModel/Armature/Skeleton" index="8"]
transform = Transform( -0.999805, 0.0196883, 0.00149377, -0.0197448, -0.997129, -0.0731063, 5.01189e-05, -0.0731267, 0.997341, -0.0754369, -0.490656, 0.0193883 )

[node name="LowerlegL" parent="CharacterModel/Armature/Skeleton" index="9"]
transform = Transform( -0.999806, -0.0196883, -0.00149377, 0.0197448, -0.997129, -0.0731063, -5.01167e-05, -0.0731267, 0.997341, 0.0754369, -0.490656, 0.0193883 )

[node name="Body" parent="CharacterModel/Armature/Skeleton" index="10"]
transform = Transform( 1, -7.10543e-15, 2.38419e-07, -7.10543e-15, 1, 5.96046e-08, -2.38419e-07, -5.96046e-08, 1, 0, 0.143877, 0 )

[node name="Head" parent="CharacterModel/Armature/Skeleton" index="11"]
transform = Transform( 1, -7.10543e-15, 2.38419e-07, -7.10543e-15, 1, 5.96046e-08, -2.38419e-07, -5.96046e-08, 1, -3.26608e-15, 0.603538, -2.73979e-08 )

[editable path="CharacterModel"]
